k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ideaboard-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ideaboard-postgres
  template:
    metadata:
      labels:
        app: ideaboard-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
